# core-ai-pet

./: .gitignore  CLAUDE.md  CoreAIpet.sln  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: Architecture.md  CoreAIpet 产品改进需求文档.md  CoreAIpet 架构评审与 VNext 产品规划.md  CoreAIpet 真正桌宠级窗口设计方案.md  PRD - Windows AI桌面助手 V1.0.md  UI-popup-redesign.md  UI-style-rules.md
docs/arch/: ARCH-LLM-Integration.md
docs/desktop-pet-design/: 00-方案对比.md  01-方案一-Electron+Live2D.md  02-方案二-Tauri+精灵图.md  03-方案三-PySide6+Live2D.md  04-方案四-Tauri+Live2D-推荐方案.md  README.md
docs/prd/: PRD-Action-Expression-Mapping.md  PRD-External-Model-Import.md  PRD-LLM-Integration.md  PRD-Settings-Panel.md  PRD-SpriteSheet-Renderer.md
openspec/changes/add-fullbody-model-and-motions/: tasks.md
openspec/changes/add-settings-panel/: tasks.md
openspec/changes/add-tray-logo-and-fix-tray-actions/: tasks.md
openspec/changes/architecture-vnext-upgrade/: design.md  tasks.md
openspec/changes/desktop-pet-with-hover-menu/: design.md  proposal.md  tasks.md
openspec/changes/fix-hwnd-click-through/: design.md  proposal.md  tasks.md
openspec/changes/fix-live2d-model-not-visible/: proposal.md  tasks.md
openspec/changes/hover-close-button/: design.md
openspec/changes/hover-menu-redesign/: tasks.md
openspec/changes/implement-v1-mvp/: design.md  proposal.md  tasks.md
openspec/changes/llm-subsystem/: design.md  proposal.md  tasks.md
openspec/changes/main-window-ui-restructure/: design.md  proposal.md  tasks.md
openspec/changes/multi-model-support/: proposal.md  tasks.md
openspec/changes/pet-model-settings/: design.md  proposal.md  tasks.md
openspec/changes/remove-window-border/: design.md  proposal.md  tasks.md
openspec/changes/resize-hit-area/: design.md  proposal.md  tasks.md
openspec/changes/resize-live2d-model/: tasks.md
openspec/changes/resize-window-half/: design.md  proposal.md  tasks.md
openspec/changes/shrink-model-display/: tasks.md
openspec/changes/sprite-sheet-renderer/: design.md  proposal.md  tasks.md
openspec/specs/avatar-abstraction/: spec.md
openspec/specs/borderless-model-display/: spec.md
openspec/specs/click-through/: spec.md
openspec/specs/event-bus/: spec.md
openspec/specs/hover-menu-layout/: spec.md
openspec/specs/live2d-model-loading/: spec.md
openspec/specs/live2d-renderer/: spec.md
openspec/specs/model-display-resize/: spec.md
openspec/specs/model-registry/: spec.md
openspec/specs/model-rendering/: spec.md
openspec/specs/motion-expression-extraction/: spec.md
openspec/specs/motion-playback/: spec.md
openspec/specs/settings-chat-connection/: spec.md
openspec/specs/settings-email-connection/: spec.md
openspec/specs/settings-jira-connection/: spec.md
openspec/specs/settings-model-config/: spec.md
openspec/specs/settings-persistence/: spec.md
openspec/specs/settings-window/: spec.md
openspec/specs/sprite-animation-engine/: spec.md
openspec/specs/sprite-avatar/: spec.md
openspec/specs/sprite-factory-integration/: spec.md
openspec/specs/sprite-manifest-spec/: spec.md
openspec/specs/sprite-renderer/: spec.md
openspec/specs/state-machine/: spec.md
openspec/specs/storage-persistence/: spec.md
openspec/specs/system-tray/: spec.md
openspec/specs/transparent-window/: spec.md
openspec/specs/trigger-handler/: spec.md
public/models/arisa/: manifest.json
public/models/panda/: manifest.json
public/models/pixel-cat/: manifest.json
public/models/shizuku/: shizuku.model.json
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: chat.json  default.json  main-app.json  settings.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  event.rs  llm.rs  mod.rs  plugin.rs  settings.rs  state.rs  storage.rs  window.rs  window_native.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/eventbus/: mod.rs
src-tauri/src/core/plugin/: mod.rs
src-tauri/src/core/state/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/llm/: config.rs  mod.rs  secret_store.rs
src-tauri/src/infrastructure/llm/provider/: anthropic.rs
src-tauri/src/infrastructure/storage/: mod.rs
src-tauri/src/services/: tray.rs
src-tauri/src/services/window/: mod.rs
src-tauri/tests/: anthropic_provider_test.rs
src/CoreAIpet.Core/: CoreAIpet.Core.csproj
src/CoreAIpet.Core/Events/: Events.cs
src/CoreAIpet.Core/Exceptions/: Exceptions.cs
src/CoreAIpet.Core/Interfaces/: IAIService.cs  IAIServiceProvider.cs  ICharacterController.cs  ICharacterRenderer.cs  IConfigService.cs  IEmailProvider.cs  IEventBus.cs  ILogService.cs  IMessageProvider.cs  IPlugin.cs  IPluginContext.cs  IPluginHost.cs  IPluginMenuProvider.cs  IPositionService.cs  IWindowService.cs
src/CoreAIpet.Desktop/: App.xaml  App.xaml.cs  CompositionRoot.cs  CoreAIpet.Desktop.csproj  GlobalUsings.cs  SingleInstanceGuard.cs
src/CoreAIpet.Desktop/Behaviors/: AutoHideBehavior.cs  RadialMenuAnimations.cs  WindowDragBehavior.cs
src/CoreAIpet.Desktop/Controls/: PetCharacterControl.cs  RadialMenuControl.cs
src/CoreAIpet.Desktop/Themes/: DarkTheme.xaml  LightTheme.xaml  ThemeManager.cs
src/CoreAIpet.Desktop/ViewModels/: ChatViewModel.cs  DebugViewModel.cs  MainViewModel.cs  RadialMenuViewModel.cs  SettingsViewModel.cs  TrayViewModel.cs
src/CoreAIpet.Desktop/Views/: ChatBubbleWindow.xaml  ChatBubbleWindow.xaml.cs  DebugWindow.xaml  DebugWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/CoreAIpet.Live2DBridge/: CMakeLists.txt  Live2DBridge.def  README.md
src/CoreAIpet.Live2DBridge/include/: bridge_api.h  bridge_types.h
src/CoreAIpet.Live2DBridge/src/: bridge_api.cpp  bridge_internal.h  cubism_allocator.cpp  cubism_animation.cpp  cubism_model.cpp  cubism_renderer.cpp  dllmain.cpp  eye_tracking.cpp
src/Plugins/: Directory.Build.props
src/components/: Live2DCanvas.vue  PetHoverMenu.vue  WindowCloseButton.vue
src/core/llm/: index.ts  (+8 more)
src/pages/: HomePage.vue  MessagePage.vue  index.ts
src/windows/: MainWindow.vue
(+260 files in other folders)
